--- a/wics-website-vue/src/assets/base.css
+++ b/wics-website-vue/src/assets/base.css
@@ -1,10 +1,33 @@
 :root {
-    /* dark background */
-    --color-primary: #072A47;
-    --color-secondary: #6aa6d6;
+    /* brand colors */
+    --color-wics-light-white: #fefefe;
+    --color-wics-dark-gray: #646c7c;
+    --color-wics-light-gray: #9da8b0;
+    --color-wics-darker-blue: #1e3244;
+    --color-wics-dark-blue: #37577f;
+    --color-wics-regular-blue: #6097c9;
+    --color-wics-light-blue: #88b9e3;
+    --color-wics-lighter-blue: #c6dbed;
 
+    /* this blue is close to regular blue but it passes WCAG AA with #fefefe */
+    --color-wics-aa-blue: #3C77AF;
+    /****************/
 
-    --color-text: #FAFAFA;
-    --color-text-hover-background: #3b6c94;
+    /* naming convention: [color/font]-[css property]-[color/shade]-[state] */
+    --color-background-light: var(--color-wics-light-white);
+    --color-background-blue: var(--color-wics-aa-blue);
+    --color-background-dark: var(--color-wics-darker-blue);
+
+    --color-background-light-hover: var(--color-wics-light-blue);
+    --color-background-dark-hover: var(--color-wics-dark-blue);
+
+    --color-text-dark: var(--color-wics-darker-blue);
+    --color-text-light: var(--color-wics-light-white);
+    --color-text-gray: var(--color-wics-dark-gray);
+
+    --color-border-dark: var(--color-wics-darker-blue);
+
+    --color-shadow-dark: var(--color-wics-darker-blue);
+
     --font-name: 'Poppins';
 }
