Create a contact us page for vue, html, css workshop.
Create contact us view and add to router.
Create new reusable component called IconCard.vue for icons and text.
Add social media information to data.
Add svg icons as template.
Update base.css to add new color used.

--- a/wics-website-vue/src/assets/base.css
+++ b/wics-website-vue/src/assets/base.css
@@ -24,6 +24,7 @@
     --color-text-dark: var(--color-wics-darker-blue);
     --color-text-light: var(--color-wics-light-white);
     --color-text-gray: var(--color-wics-dark-gray);
+    --color-text-blue: var(--color-wics-dark-blue);
 
     --color-border-dark: var(--color-wics-darker-blue);
 
