Added fonts to font family, changed instances of font-name

--- a/wics-website-vue/src/assets/base.css
+++ b/wics-website-vue/src/assets/base.css
@@ -36,5 +36,5 @@
 
     --color-shadow-dark: var(--color-wics-darker-blue);
 
-    --font-name: 'Poppins';
+    --font-primary: 'Poppins', Arial, sans-serif;
 }
