--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,42 +1,42 @@
 :root {
-    /* brand colors */
-    --color-wics-light-white: #fefefe;
-    --color-wics-dark-gray: #646c7c;
-    --color-wics-light-gray: #9da8b0;
-    --color-wics-darker-blue: #1e3244;
-    --color-wics-dark-blue: #37577f;
-    --color-wics-regular-blue: #6097c9;
-    --color-wics-light-blue: #88b9e3;
-    --color-wics-lighter-blue: #c6dbed;
-    --color-wics-lightest-blue: #d9e7f8;
+  /* brand colors */
+  --color-wics-light-white: #fefefe;
+  --color-wics-dark-gray: #646c7c;
+  --color-wics-light-gray: #9da8b0;
+  --color-wics-darker-blue: #1e3244;
+  --color-wics-dark-blue: #37577f;
+  --color-wics-regular-blue: #6097c9;
+  --color-wics-light-blue: #88b9e3;
+  --color-wics-lighter-blue: #c6dbed;
+  --color-wics-lightest-blue: #d9e7f8;
 
-    /* this blue is close to regular blue but it passes WCAG AA with #fefefe */
-    --color-wics-aa-blue: #3C77AF;
-    /****************/
+  /* this blue is close to regular blue but it passes WCAG AA with #fefefe */
+  --color-wics-aa-blue: #3c77af;
+  /****************/
 
-    /* naming convention: [color/font]-[css property]-[color/shade]-[state] */
-    --color-background-light: var(--color-wics-light-white);
-    --color-background-lighter_blue: var(--color-wics-lighter-blue);
-    --color-background-lightest_blue: var(--color-wics-lightest-blue);
-    --color-background-blue: var(--color-wics-aa-blue);
-    --color-background-dark: var(--color-wics-darker-blue);
+  /* naming convention: [color/font]-[css property]-[color/shade]-[state] */
+  --color-background-light: var(--color-wics-light-white);
+  --color-background-lighter_blue: var(--color-wics-lighter-blue);
+  --color-background-lightest_blue: var(--color-wics-lightest-blue);
+  --color-background-blue: var(--color-wics-aa-blue);
+  --color-background-dark: var(--color-wics-darker-blue);
 
-    --color-background-light-hover: var(--color-wics-light-blue);
-    --color-background-blue-hover: var(--color-wics-aa-blue);
-    --color-background-dark-hover: var(--color-wics-dark-blue);
+  --color-background-light-hover: var(--color-wics-light-blue);
+  --color-background-blue-hover: var(--color-wics-aa-blue);
+  --color-background-dark-hover: var(--color-wics-dark-blue);
 
-    --color-background-darker_blue-active: var(--color-wics-darker-blue);
+  --color-background-darker_blue-active: var(--color-wics-darker-blue);
 
-    --color-text-dark: var(--color-wics-darker-blue);
-    --color-text-light: var(--color-wics-light-white);
-    --color-text-gray: var(--color-wics-dark-gray);
+  --color-text-dark: var(--color-wics-darker-blue);
+  --color-text-light: var(--color-wics-light-white);
+  --color-text-gray: var(--color-wics-dark-gray);
 
-    --color-border-dark: var(--color-wics-dark-blue);
-    --color-border-darker_blue: var(--color-wics-darker-blue);
+  --color-border-dark: var(--color-wics-dark-blue);
+  --color-border-darker_blue: var(--color-wics-darker-blue);
 
-    --color-svg-dark_blue: var(--color-wics-dark-blue);
+  --color-svg-dark_blue: var(--color-wics-dark-blue);
 
-    --color-shadow-dark: var(--color-wics-darker-blue);
+  --color-shadow-dark: var(--color-wics-darker-blue);
 
-    --font-primary: 'Poppins', Arial, sans-serif;
+  --font-primary: 'Poppins', Arial, sans-serif;
 }
